--- a/src/pages/screens/Dashboard/Dashboard.module.scss
+++ b/src/pages/screens/Dashboard/Dashboard.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import '../../../styles/variables';
+@import '../../../styles/mixins';
 //misc
 #submit_data_line {
     background-color: rgba(0, 0, 0, 0.5);
