--- a/src/pages/screens/Signin/Signin.module.scss
+++ b/src/pages/screens/Signin/Signin.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import '../../../styles/variables';
 #logo {
     color: white;
     font-family: $headerFont;
@@ -7,7 +7,7 @@
 
 .left_design {
     min-width: 60%;
-    background-image: url('./imgs/signin-back.png');
+    background-image: url('imgs/signin-back.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
