--- a/src/pages/screens/Submission/Submission.module.scss
+++ b/src/pages/screens/Submission/Submission.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import '../../../styles/variables';
+@import '../../../styles/mixins';
 .form_control {
     min-width: 120px !important;
     margin: 1rem !important;
