--- a/src/pages/screens/Signin/Signin.module.scss
+++ b/src/pages/screens/Signin/Signin.module.scss
@@ -26,9 +26,12 @@
 }
 
 .signin_icon {
-    transition: 0.2s ease-in-out
+    transition: 0.2s ease-in-out;
+    border-radius: 50%;
 }
 
 .signin_icon:hover {
-    transform: translateY("-3px")
+    transform: translateY(-3px);
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 }
