--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;700;800;900&display=swap');
-$headerFont: "Anton",
-sans-serif;
-$paraFont: "Raleway",
-sans-serif;
+$headerFont: "Anton", sans-serif;
+$paraFont: "Raleway", sans-serif;
 $bgColor: #2B2B2B;
 $priColor: #9D67E3;
 $secColor: #50E3C1;
