--- a/src/components/Progression/Progression.module.scss
+++ b/src/components/Progression/Progression.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
 //lin prog
 .lin_progress_root {
     background-color: #000000 !important;
