--- a/src/components/Navi/navi.module.scss
+++ b/src/components/Navi/navi.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
 #navbar {
     background: linear-gradient(100deg, $priColor, $priColor, $secColor, $secColor)
 }
