--- a/src/components/SubmissionGraphs/index.module.scss
+++ b/src/components/SubmissionGraphs/index.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import 'styles/variables';
+@import 'styles/mixins';
 
 //Submission Rows
 .submissions_graph_wrapper {
