--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,8 +15,53 @@ body {
 }
 
 //text 
-h1 {
-    font-size: calc(20px + 2vw)
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+h2,
+h3,
+p {
+    font-family: $paraFont;
+}
+h2 {
+    font-weight: 800;
+    font-size: calc(1.3rem + 0.6vw);
+    letter-spacing: calc(0.05rem + 0.04vw);
+}
+h3 {
+    font-weight: 300;
+    font-size: calc(0.6rem + 0.6vw);
+    letter-spacing: calc(0.03rem + 0.04vw);
+}
+h4 {
+    font-weight: 700;
+    font-size: calc(0.5rem + 0.5vw);
+    letter-spacing: calc(0.03rem + 0.04vw);
+}
+h5 {
+    font-weight: 100;
+    font-size: calc(0.4rem + 0.5vw);
+    letter-spacing: calc(0.03rem + 0.04vw);
+    opacity: 0.7;
+}
+p {
+    font-weight: 100;
+    font-size: calc(0.4rem + 0.5vw);
+    letter-spacing: calc(0.03rem + 0.04vw);
+}
+
+.page-header {
+    font-size: calc(20px + 2vw);
+    color: white;
+    font-family: $headerFont;
 }
 
 .row {
