Form Validation on Lock

--- a/src/components/Graphs/index.module.scss
+++ b/src/components/Graphs/index.module.scss
@@ -55,7 +55,7 @@
 
 .circle_svg {
     height: 100%;
-    display: inline-block;
+    display: inline-block !important;
     margin-bottom: 20px;
 }
 
