--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,9 @@ h3,
 p {
     font-family: $paraFont;
 }
+
+// Sizing values should be synced with lib/MaterialStyles.js if updated
+
 h2 {
     font-weight: 800;
     font-size: calc(1rem + 1vw);
@@ -49,13 +52,13 @@ h4 {
 }
 h5 {
     font-weight: 100;
-    font-size: calc(0.4rem + 0.5vw);
+    font-size: calc(0.5rem + 0.5vw);
     letter-spacing: calc(0.03rem + 0.04vw);
     opacity: 0.7;
 }
 p {
     font-weight: 100;
-    font-size: calc(0.4rem + 0.5vw);
+    font-size: calc(0.5rem + 0.5vw);
     letter-spacing: calc(0.03rem + 0.04vw);
 }
 
@@ -95,7 +98,7 @@ p {
     transition: 0.3s ease-in-out;
     position: relative;
     overflow: hidden;
-    
+
     .status-title {
         width: 100%;
         text-overflow: ellipsis;
@@ -103,9 +106,19 @@ p {
     }
 }
 
-$bgLighten: lighten($bgColor, 2%);
 .status-wrapper:hover {
     box-shadow: -5px 13px 13px rgba(0, 0, 0, 0.17);
-    background-color: $bgLighten;
+    background-color: lighten($bgColor, 2%);
     transform: translateY(-5px)
+}
+
+// walls
+.feature-wall {
+    position: relative;
+}
+
+.feature-wall-background {
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
 }
