--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -115,13 +115,12 @@ p {
 
 // walls
 .feature-wall {
-    position: relative;
+    background-color: rgba(0, 0, 0, 0.3);
+    pointer-events: none;
 }
-
 .feature-wall-background {
-    width: 100%;
-    height: 100%;
-    filter: blur(10px);
+    filter: blur(4px);
+    pointer-events: none;
 }
 
 // Transitions
@@ -151,6 +150,14 @@ p {
 }
 
 // Misc
+.cover {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .back-button {
     white-space: nowrap;
     cursor: pointer;
