--- a/src/components/Graphs/index.module.scss
+++ b/src/components/Graphs/index.module.scss
@@ -7,6 +7,10 @@
     border-radius: 10px;
     margin-right: 10px;
     overflow: hidden;
+
+    &_full {
+        border: 2.5px solid $tertColor;
+    }
 }
 
 .submissions_graph {
